--- a/projet_blog/src/input.css
+++ b/projet_blog/src/input.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.modal-connexion-js{
+    background-color: rgba(30, 64, 175, 0.5);
+}
