--- a/css/all_article.css
+++ b/css/all_article.css
@@ -11,8 +11,13 @@ body > div > div{
     width:80%;
     margin-top: 20px;
     border-radius: 45px;
+    box-shadow: 2px 2px black;
 }
 
 h3{
     text-decoration: underline;
+}
+
+form{
+    margin-top: 30px;
 }
